Fix a layout issue in the TagList component

--- a/src/components/TagList.scss
+++ b/src/components/TagList.scss
@@ -1,7 +1,13 @@
 .tags-list {
   display: flex;
   justify-content: center;
+  align-content: space-between;
   flex-wrap: wrap;
   width: 100%;
   margin-bottom: 4rem;
+  margin-top: -2.5rem;
+}
+
+.tags-list > * {
+  margin-top: 2.5rem;
 }
